--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -18,11 +18,26 @@ jobs:
       - name: Install dependencies
         run: dart pub get
 
-      - name: Compile binaries
-        run: dart compile exe bin/linkie.dart -o linkie
 
-      - name: Upload a Build Artifact
+      - name: Compile windows binary
+        run: dart compile exe bin/linkie.dart -o linkie.exe
+        if: matrix.os == 'windows-latest'
+
+      - name: Compile binary
+        run: dart compile exe bin/linkie.dart -o linkie
+        if: matrix.os != 'windows-latest'
+
+
+      - name: Upload windows artifact
         uses: actions/upload-artifact@v3.0.0
+        if: matrix.os == 'windows-latest'
+        with:
+            name: artifacts-${{ matrix.os }}
+            path: linkie.exe
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3.0.0
+        if: matrix.os != 'windows-latest'
         with:
             name: artifacts-${{ matrix.os }}
             path: linkie
